fixed some button alignment and removed 'by hand' button from bootstrap

--- a/www/css/bootswatch.less
+++ b/www/css/bootswatch.less
@@ -95,7 +95,9 @@ body {
 .btn-warning {
   .buttonBackground(lighten(@orange, 15%), @orange);
 }
-
+.btn-cute-blue{
+    .buttonBackground(#4ac6ec,#1cb8e7);
+}
 .btn-light-blue
 {
   background-color: hsl(194, 81%, 51%) !important;
